# simple-gif

./: .gitignore  README.md  main.py  pyproject.toml
gif_maker/: __init__.py  gif_maker.py
simplegif/: __init__.py  simplegif.py
